	- Added ability to manually aim guns using GPS coordinates, primarily for artillery. This behavior is not yet a functionality in Guard Mode, however when a GPS target is manually selected, turrets will now aim to attempt to hit said target.

v1.5.2.1
IMPROVEMENTS / FIXES
- Fix a variety of exceptions in pre-1.11.1 KSP due to missing API functions.
- Allow deploying to multiple KSP instances when compiling in Linux (add the extra KSP locations as lines in the ksp_dir.txt file).

v1.5.2.0
IMPROVEMENTS / FIXES
- General:
	- Fix packaging issue in recent releases that contain incorrect capitalisation of certain files and folders.
	- Adjust capitalization of "sounds" folders for parts to be consistent.
	- Fix memory leaks caught by KSPCF.
	- Make wheels susceptible to bullets and explosions too.
	- Fix off-centered arrow on inline radome texture  Git Issue #409
	- Re-fix lead issue on Apple Silicon.
	- Adds optional adjustable Logarithmic HP clamp, replacing the Proc Part Max HP slider.
	- Adds optional toggle to disable lift from colliderless PWing edges for better balance with stock wings/prevent pwing abuse.
	- Apply the gapless particle emitter option to 'DecalGaplessParticleEmitter's too.
	- Add Attachnode to the Ordinance bay to fix issues with Breaking Ground Robotics.
	- Adds debugging messages to assist with making custom weapons.
	- Adds MM patch to add liftless Proc Structural Panel if B9 Pwings installed.
	- Reduce frequency (hopefully to none) of null FX object pool entries by catching unloading events too and triggering OnJustAboutToBeDestroyed before recovering vessels.
	- Allow use of the combat seat as the root part.
- UI:
	- Fix exception when resetting colours in Team Icons.
	- Prevent the kill timer from showing in the Loaded Vessel Switcher window for surface vessels.
	- Updated German localization by EzBro.
	- Adds Accuracy readout to the Weapon Debugging telemetry.